--- a/page.css
+++ b/page.css
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: black;
     color: white;
@@ -18,13 +20,22 @@ hr {
 }
 #cim {
     margin-left: 50px;
-    margin-top: 150px;
+    position: relative;
 }
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     line-height: 0.9;
     font-size: 60pt;
+}
+#nagy_kep {
+    background-image: url("images/borito.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 700px;
+    padding-top: 120px;
+    background-color: purple;
 }
 #cim_alatti_vonal {
     background-color: red;
@@ -46,6 +57,7 @@ header .idezet {
 }
 #bevezeto {
     max-width: 1050px;
+    margin-top: -200px;
     margin-left: auto;
     margin-right: auto;
     font-size: 1.4em;
@@ -113,6 +125,12 @@ section hr {
     font-size: 18pt;
     margin: 0px;
 }
+article div.hatter{
+    background-image: url("images/minta.svg");
+    background-repeat: repeat-x;
+    background-size: 50px 55px;
+    background-position: center top;
+}
 .fuggoleges {
     float: left;
     background-color: red;
@@ -133,6 +151,7 @@ nav {
     background-image: linear-gradient(#383737, #000000, #202020);
     box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.9);
     padding: 0px;
+    z-index: 50;
     }
 #menu {
     margin-left: auto;
@@ -145,7 +164,7 @@ nav {
     list-style-type: none;
     margin-left: auto;
     margin-right: auto;
-    height: 65px;
+    height: 64px;
     padding: 0px;
     margin-top: 0px;
     width: 800px;
@@ -163,17 +182,17 @@ nav {
     color: white;
 }
 #hamburger {
-    width: 50px;
+    width: 30px;
     height: 44px;
-    margin: 29px 44px;
+    margin: 15px 15px;
     float: right;
     display: none;
 }
 #hamburger div{
     background-color: white;
-    height:6px;
-    margin:6px;
-    border-radius: 3px;
+    height:3px;
+    margin:3px;
+    border-radius: 1.5px;
 }
 #logo_fejlecben {
     display: none;
@@ -181,19 +200,66 @@ nav {
 }
 .nagy_kepkeret {
     width: 100%;
-    margin-bottom: 35px;
+    position:relative; 
+    height: 60px; 
+    padding-top: 50%; 
+    background-size: cover; 
+    margin-bottom: 50px;
+}
+#kozosseg .nagy_kepkeret {
+    padding-top: 35%;
+}
+#videoValasztas {
+    overflow: auto;
+    margin-left: -2%;
+    margin-right: -2%;
+}
+.filmecskek {
+    float: left;
+    width: 21%;
+    height: 200px;
+    margin: 2%;
+}
+.filmecskek:hover {
+    background-color: red;
+}
+.resp-container {
+    position: relative;
     overflow: hidden;
+    padding-top: 56.25%;
 }
-.nagy_kepek {
+.resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    min-width: 500px;
+    height: 100%;
+    border: 0;
 }
+.keptarto {
+    position: relative;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 0;
+}
+.keptarto img {
+    display: inline-block;
+    margin: none;
+    padding: none;
+    border: none;
+    font-size: 0px;
+}
+
+
 @media screen and (max-width: 950px) {
     nav {
-        height: 100px;
-        padding: 0px
-        z-index: 100;
-                }
+        right: 0px;
+        height: 50px;
+        width: 60px;
+        background-color: red;
+        display: inline-block;
+        background-image: none;
+    }
     #menu {
         margin-left: 0px;
         width: 100%;
@@ -229,6 +295,8 @@ nav {
         height: 45px;
         margin-top: 28px;
     }
+    
+    
 }
 @media screen and (max-width: 650px){
     h1 {
