--- a/page.css
+++ b/page.css
@@ -85,7 +85,7 @@ section p {
     max-width: 710px;
     margin-left: auto;
     margin-right: auto;
-    font-size: 14pt;
+    font-size: 14.5pt;
     line-height: 1.6;
 }
 section hr {
@@ -249,7 +249,24 @@ nav {
     border: none;
     font-size: 0px;
 }
-
+footer {
+    font-size: 14px;
+    line-height: 1.6;
+}
+#tartalma {
+    padding: 40px 0px;
+    margin: 50px;
+}
+#eltartas {
+margin: 0 50px;
+}
+#szoveg {
+float: left;
+}
+footer img {
+    width: 218px;
+}
+}
 
 @media screen and (max-width: 950px) {
     nav {
@@ -287,23 +304,22 @@ nav {
     #hamburger {
         display: inline-block;
     }
-    #logo_kepen {
-        display: none;
-    }
-    #logo_fejlecben {
-        display: inline-block;
-        height: 45px;
-        margin-top: 28px;
-    }
+   
+    
+
     
     
 }
 @media screen and (max-width: 650px){
     h1 {
-        font-size: 35pt;
+        font-size: 11vw;
+    }
+    #logo_kepen {
+        width: 45%;
     }
     #bevezeto {
         padding: 25px;
+        font-size: 19px;
     }
     section {
         padding: 25px;
@@ -326,7 +342,9 @@ nav {
     }
     h2 {    
         font-weight: bold;
-        font-size: 33px;
+        font-size: 8vw;
+        padding-top: 5%;
+
     }
     .piros {
         padding: 15px;
@@ -343,5 +361,18 @@ nav {
     }
     .piros span {
         width: 100%;
+    }
+    article div.hatter{
+        background-size: 7%;
+    }
+    #eltartas {
+        margin: 0 25px;
+        }
+    #szoveg {
+        float: left;
+        width: 100%;
+        }
+    footer img {
+        width: 170px;
     }
 }
